<resources>
    <string name="app_name">Dr_Mitra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_health_is_our_priority">Your Health is Our Priority</string>
    <string name="book_appointments_easily_and_get_expert_care_at_your_convenience">book appointments easily and get expert care at your convenience</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="stay_on_top_of_your_well">Stay on top of your well</string>
    <string name="being_with_quick_doctor_appointments_and_personalized_health_care">being with quick doctor appointments and personalized health care</string>
    <string name="prev">Prev</string>
    <string name="seamless_access_to_quality_care">Seamless access to quality care</string>
    <string name="schedule_your_doctor_visits_with_just_a_few_taps">schedule your doctor visits with just a few taps</string>
    <string name="expert_care_at_your_fingertips">Expert care at your fingertips</string>
    <string name="connect_with_healthcare_professionals_anytime_anywhere">connect with healthcare professionals anytime, anywhere</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="your_health_is_our_priority1">Your health is our priority</string>
    <string name="get_started">Get Started</string>
    <string name="navigation_drawer_open">navigation_drawer_open\n</string>
    <string name="navigation_drawer_close">navigation_drawer_close\n</string>
    <string name="star_passwords">******</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="_4_7">4.7</string>
    <string name="general_doctor_5years_exp">General Doctor (5years Exp)</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="_2_4km">2.4KM</string>
    <string name="_56_deva_rd_khand_2_matiyari_chinhat_lucknow_uttar_pradesh_226028"><![CDATA[56, Deva Rd, Khand -2, Matiyari, Chinhat, Lucknow, Uttar Pradesh - 226028]]></string>
    <string name="rs">Rs.</string>
    <string name="_500">500</string>
    <string name="consultation_fee">Consultation Fee</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="senior_doctor">Senior Doctor</string>
    <string name="cardiologist">Cardiologist</string>
    <string name="gender_male">Gender : Male</string>
    <string name="id_marcuschar2024">id- marcuschar2024</string>
    <string name="_5_years">5 years</string>
    <string name="medanta_hospital">Medanta Hospital</string>
    <string name="on_board">On Board</string>
    <string name="abcd_gali_lucknow_220001">abcd gali,Lucknow 220001</string>
    <string name="abcd_gmail_com">abcd@gmail.com</string>
    <string name="_91_888888888">+91-888888888</string>
    <string name="address">ADDRESS</string>
    <string name="email_id">EMAIL ID</string>
    <string name="phone">PHONE</string>
    <string name="contacts">Contacts</string>
    <string name="if_your_custom_cardview_is_still_showing_on_top_of_the_drawer_it_might_be_due_to_how_the_navigationview_handles_its_layout_internally_by_default_the_navigationview_does_not_support_adding_custom_views_below_the_menu_items_unless_handled_carefully">If your custom CardView is still showing on top of the drawer, it might be due to how the NavigationView handles its layout internally. By default, the NavigationView does not support adding custom views below the menu items unless handled carefully</string>
    <string name="bio">Bio</string>
    <string name="submit">Submit</string>
    <string name="doctor_position">Doctor Position</string>
    <string name="doctor_specification">Doctor Specification</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="patient_name">Patient Name</string>
    <string name="_25_y_o">25 y/o</string>
    <string name="kidney_failure">Kidney failure</string>
    <string name="emergency">Emergency</string>
    <string name="_11_00_12_00_am">11:00 – 12:00 AM</string>
</resources>