<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.Onboarding_Screen2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#dbe6f8">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:src="@drawable/onbording_img2"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/skip_button_onboarding2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:layout_below="@+id/imageView"

        android:layout_alignParentBottom="true"

        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="30dp"

        app:cardElevation="40dp"
        tools:ignore="TextSizeCheck,TextSizeCheck">

        <TextView
            android:id="@+id/text_top_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/stay_on_top_of_your_well"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="155dp"
            android:layout_marginEnd="10dp"
            android:text="@string/being_with_quick_doctor_appointments_and_personalized_health_care"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/previous_button_onboarding2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="377dp"
            android:layout_marginEnd="100dp"
            android:text="@string/prev"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/next_button_onboarding2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="377dp"
            android:layout_marginEnd="35dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>
</RelativeLayout>