<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".doctor.doctorhome.doctorprofile.DoctorProfile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/doctor_profile_card_main"
            android:backgroundTint="@color/green"
            app:cardCornerRadius="15dp"

            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/doctor_profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:src="@drawable/img"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/doctor_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/doctor_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/doctor_profile_image"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="09dp"
                    android:padding="2dp"

                    app:layout_constraintStart_toEndOf="@id/doctor_profile_image"
                    app:layout_constraintTop_toBottomOf="@id/doctor_profile_name">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/senior_doctor"
                        android:textSize="14sp"
                        android:fontFamily="@font/lato"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cardiologist"
                        android:fontFamily="@font/lato"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/doctor_profile_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:text="@string/gender_male"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/doctor_profile_image"
                    app:layout_constraintTop_toBottomOf="@id/ll1" />
                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="09dp"
                    android:padding="2dp"
                    app:layout_constraintStart_toEndOf="@id/doctor_profile_image"
                    app:layout_constraintTop_toBottomOf="@id/doctor_profile_gender"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_years"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="2dp"/>
                    <LinearLayout
                        android:id="@+id/ll22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="25dp"
                        app:layout_constraintTop_toTopOf="@id/doctor_profile_name"
                        >

                        <ImageView
                            android:id="@+id/location_icon"
                            android:layout_width="20dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_location_pin_24" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/medanta_hospital"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="09dp"
                    android:padding="2dp"

                    app:layout_constraintStart_toEndOf="@id/doctor_profile_image"
                    app:layout_constraintTop_toBottomOf="@id/ll2"
                    >

                    <LinearLayout
                        android:id="@+id/ll33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="25dp"
                        app:layout_constraintTop_toTopOf="@id/doctor_profile_name"
                        >

                        <ImageView
                            android:id="@+id/star_rating_icon"
                            android:layout_width="20dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"
                            android:src="@drawable/rating_star" />

                        <TextView
                            android:layout_width="37dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/_4_7"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_marcuschar2024"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>



    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>