<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".doctor.doctorhome.doctorprofile.DoctorEditProfil">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:background="@drawable/login_edit_text_bg"
            android:paddingStart="5dp"
            android:src="@drawable/back_button"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_circleImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:civ_border_color="@color/white"
            app:civ_border_width="5dp"
            android:src="@drawable/img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <EditText
            android:id="@+id/doctor_edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="Doctor Name"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_circleImageView" />
        <EditText
            android:id="@+id/doctor_id_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="Doctor ID"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_edit_profile_name"/>
        <EditText
            android:id="@+id/doctor_edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_edit_text_bg"
            android:padding="15dp"

            app:layout_constraintTop_toBottomOf="@id/doctor_id_profile_edit" />
        <EditText
            android:id="@+id/doctor_edit_profile_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="Phone Number 1"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_edit_profile_email" />
        <EditText
            android:id="@+id/doctor_edit_profile_phone_number_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="Phone Number 2"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_edit_profile_phone_number" />


        <EditText
            android:id="@+id/doctor_position_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="@string/doctor_position"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_edit_profile_phone_number_2" />


        <EditText
            android:id="@+id/doctor_specification_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="@string/doctor_specification"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_position_edit" />

        <EditText
            android:id="@+id/doctor_experience_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="Doctor Experience"
            android:inputType="number"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_specification_edit" />


        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/doctor_experience_edit">
            <EditText
                android:id="@+id/patient_edit_profile_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/login_edit_text_bg"
                android:padding="15dp"
                android:hint="@string/gender"
                android:inputType="number" />
            <EditText
                android:id="@+id/doctor_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/login_edit_text_bg"
                android:padding="15dp"
                android:hint="@string/age"
                android:inputType="number" />


        </LinearLayout>

        <EditText
            android:id="@+id/doctor_edit_profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/login_edit_text_bg"
            android:hint="Bio only in 50 words"
            android:minHeight="100dp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/ll2" />







        <com.google.android.material.button.MaterialButton
            android:id="@+id/doctor_edit_profile_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:backgroundTint="@color/green"
            style="@style/patient_buttonStyle"

            android:text="@string/submit"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"


            app:layout_constraintTop_toBottomOf="@id/doctor_edit_profile_bio"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>